// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders correctly when closed 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 276px;
  padding-left: 24px;
  padding-right: 24px;
  position: fixed;
  overflow: auto;
  bottom: 0;
  top: 0;
  left: 0;
  z-index: 3;
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  -webkit-transition: -webkit-transform 300ms;
  transition: transform 300ms;
  margin-top: 64px;
  background-color: #F4F4F4;
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 1px 0 0;
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    margin-top: 80px;
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    overflow: hidden;
  }

  .emotion-0:hover {
    overflow: auto;
  }
}

@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-0 {
    overflow: auto;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: #F4F4F4;
  padding-top: 16px;
  padding-bottom: 32px;
  width: 100%;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
}

@media screen {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    display: none;
  }
}

.emotion-3 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #243853;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 16px;
  height: 16px;
  fill: #243853;
}

.emotion-7 {
  font-family: 'DM Sans',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-8 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-8:last-child {
  margin-bottom: 24px;
}

.emotion-9 {
  margin-bottom: 24px;
}

.emotion-10 {
  font-family: 'Poppins',sans-serif;
  font-size: 18px;
  line-height: 1.3333333333333333;
  font-weight: 700;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  min-height: 40px;
  padding: 8px 0;
}

.emotion-12 {
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 700;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  min-height: 32px;
  margin-top: 20px;
}

.emotion-13 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13:hover:not(:disabled) {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-13 {
    vertical-align: text-bottom;
  }
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-15 {
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 600;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  box-sizing: border-box;
  color: #677483;
  cursor: 'pointer';
  min-width: 230px;
  padding: 12px;
  margin: 4px 0;
  text-overflow: ellipsis;
}

.emotion-15::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3486607142857143em;
}

.emotion-15::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4892857142857143em;
}

.emotion-15:hover:not(:disabled) {
  background-color: #E0E7FF;
  border-radius: 20rem;
  color: #162740;
}

.emotion-15:active:not(:disabled) {
  background-color: #AEBFFF;
  border-radius: 20rem;
  color: #162740;
}

.emotion-19 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
    data-testid="sidebar"
    role="complementary"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
            data-testid="close-icon"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="emotion-5 emotion-6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <nav
      aria-label="Sidebar"
      class="emotion-7"
      role="navigation"
    >
      <ul
        class="emotion-8"
        role="list"
      >
        <li
          class="emotion-9"
        >
          <div
            class="emotion-10"
            data-testid="/getting-started"
          >
            Getting Started
          </div>
          <div
            class="emotion-9"
          >
            <div
              class="emotion-12"
              id="/getting-started/code"
            >
              Code
            </div>
            <div>
              <a
                class="emotion-13"
                href="/getting-started/code/web"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/getting-started/code/web"
                  >
                    Web
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/getting-started/code/instrumentation"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/getting-started/code/instrumentation"
                  >
                    Instrumentation
                  </div>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="emotion-19"
            data-testid="divider"
          />
        </li>
        <li
          class="emotion-9"
        >
          <div
            class="emotion-10"
            data-testid="/theming"
          >
            Theme
          </div>
          <div
            class="emotion-9"
          >
            <div>
              <a
                class="emotion-13"
                href="/theming/overview"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/overview"
                  >
                    Overview
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/creating-a-theme"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/creating-a-theme"
                  >
                    Creating a theme
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/using-a-theme"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/using-a-theme"
                  >
                    Using a theme
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/theming/foundations"
            >
              Foundations
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/foundations/overview"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/foundations/overview"
                  >
                    Overview
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/foundations/colours"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/foundations/colours"
                  >
                    Colours
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/foundations/motions"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/foundations/motions"
                  >
                    Motions
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/theming/presets"
            >
              Presets
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/presets/space-presets"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/presets/space-presets"
                  >
                    Space Presets
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/presets/style-presets"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/presets/style-presets"
                  >
                    Style Presets
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/presets/typography-presets"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/presets/typography-presets"
                  >
                    Typography Presets
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/theming/component-defaults"
            >
              Component Defaults
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/component-defaults/overview"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/component-defaults/overview"
                  >
                    Overview
                  </div>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="emotion-19"
            data-testid="divider"
          />
        </li>
        <li
          class="emotion-9"
        >
          <div
            class="emotion-10"
            data-testid="/components"
          >
            Components
          </div>
          <div
            class="emotion-9"
          >
            <div
              class="emotion-12"
              id="/components/action-and-inputs"
            >
              Actions & Inputs
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/button"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/button"
                  >
                    Button
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/form"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/form"
                  >
                    Form
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/share-bar"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/share-bar"
                  >
                    Share Bar
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/slider"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/slider"
                  >
                    Slider
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/text-input"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/text-input"
                  >
                    Text Input
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/components/feedback-and-status"
            >
              Feedback & Status
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/flag"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/flag"
                  >
                    Flag
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/progress-indicator"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/progress-indicator"
                  >
                    Progress Indicator
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/components/layout"
            >
              Layout
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/aspect-ratio"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/aspect-ratio"
                  >
                    Aspect Ratio
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/block"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/block"
                  >
                    Block
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/card"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/card"
                  >
                    Card
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/divider"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/divider"
                  >
                    Divider
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/drawer"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/drawer"
                  >
                    Drawer
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/grid"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/grid"
                  >
                    Grid
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/stack"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/stack"
                  >
                    Stack
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/visibility"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/visibility"
                  >
                    Visibility
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/components/media"
            >
              Media
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/audio-player"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/audio-player"
                  >
                    Audio Player
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/icons"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/icons"
                  >
                    Icons
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/image"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/image"
                  >
                    Image
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/volume-control"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/volume-control"
                  >
                    Volume Control
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/components/navigation"
            >
              Navigation
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/link"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/link"
                  >
                    Link
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/scroll"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/scroll"
                  >
                    Scroll
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/tabs"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/tabs"
                  >
                    Tabs
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/tag"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/tag"
                  >
                    Tag
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/title-bar"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/title-bar"
                  >
                    Title Bar
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/components/text"
            >
              Text
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/byline"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/byline"
                  >
                    Byline
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/caption"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/caption"
                  >
                    Caption
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/date-time"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/date-time"
                  >
                    Date Time
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/headline"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/headline"
                  >
                    Headline
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/ordered-list"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/ordered-list"
                  >
                    Ordered List
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/standfirst"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/standfirst"
                  >
                    Standfirst
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/text-block"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/text-block"
                  >
                    Text Block
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/unordered-list"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/unordered-list"
                  >
                    Unordered List
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/components/third-party"
            >
              Third Party Integrations
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/consent"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/consent"
                  >
                    Consent
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/consent-settings-link"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/consent-settings-link"
                  >
                    Consent Settings Link
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/experimentation-web"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/experimentation-web"
                  >
                    Experimentation Web
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/tealium"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/tealium"
                  >
                    Tealium
                  </div>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="emotion-19"
            data-testid="divider"
          />
        </li>
        <li
          class="emotion-9"
        >
          <div
            class="emotion-10"
            data-testid="/utils"
          >
            Utilities
          </div>
          <div
            class="emotion-9"
          >
            <div>
              <a
                class="emotion-13"
                href="/utils/emotion"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/utils/emotion"
                  >
                    Emotion
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/utils/custom-to-newskit-icon"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/utils/custom-to-newskit-icon"
                  >
                    customToNewsKitIcon
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/utils/get-css-from-theme"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/utils/get-css-from-theme"
                  >
                    getCssFromTheme
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/utils/get-from-theme"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/utils/get-from-theme"
                  >
                    getFromTheme
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/utils/get-defaults"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/utils/get-defaults"
                  >
                    getComponentDefaults
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/utils/hooks"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/utils/hooks"
                  >
                    Hooks
                  </div>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="emotion-19"
            data-testid="divider"
          />
        </li>
        <li
          class="emotion-9"
        >
          <div
            class="emotion-10"
            data-testid="/help"
          >
            Help
          </div>
          <div
            class="emotion-9"
          >
            <div>
              <a
                class="emotion-13"
                href="/help/contact-us"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/help/contact-us"
                  >
                    Contact Us
                  </div>
                </span>
              </a>
            </div>
          </div>
        </li>
      </ul>
    </nav>
  </div>
  .emotion-0 {
  background-color: rgba(0, 0, 0, 0.8);
  position: fixed;
  overflow: auto;
  bottom: 0;
  top: 0;
  left: 0;
  right: 100%;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 0.6s,right 0.3s;
  transition: opacity 0.6s,right 0.3s;
  z-index: 2;
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

<div
    class="emotion-0"
    data-testid="overlay"
  />
</DocumentFragment>
`;

exports[`Sidebar renders correctly when open 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 276px;
  padding-left: 24px;
  padding-right: 24px;
  position: fixed;
  overflow: auto;
  bottom: 0;
  top: 0;
  left: 0;
  z-index: 3;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 300ms;
  transition: transform 300ms;
  margin-top: 64px;
  background-color: #F4F4F4;
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 1px 0 0;
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    margin-top: 80px;
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    overflow: hidden;
  }

  .emotion-0:hover {
    overflow: auto;
  }
}

@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-0 {
    overflow: auto;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: #F4F4F4;
  padding-top: 16px;
  padding-bottom: 32px;
  width: 100%;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
}

@media screen {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    display: none;
  }
}

.emotion-3 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #243853;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 16px;
  height: 16px;
  fill: #243853;
}

.emotion-7 {
  font-family: 'DM Sans',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-8 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-8:last-child {
  margin-bottom: 24px;
}

.emotion-9 {
  margin-bottom: 24px;
}

.emotion-10 {
  font-family: 'Poppins',sans-serif;
  font-size: 18px;
  line-height: 1.3333333333333333;
  font-weight: 700;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  min-height: 40px;
  padding: 8px 0;
}

.emotion-12 {
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 700;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  min-height: 32px;
  margin-top: 20px;
}

.emotion-13 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13:hover:not(:disabled) {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-13 {
    vertical-align: text-bottom;
  }
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-15 {
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 600;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  box-sizing: border-box;
  color: #677483;
  cursor: 'pointer';
  min-width: 230px;
  padding: 12px;
  margin: 4px 0;
  text-overflow: ellipsis;
}

.emotion-15::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3486607142857143em;
}

.emotion-15::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4892857142857143em;
}

.emotion-15:hover:not(:disabled) {
  background-color: #E0E7FF;
  border-radius: 20rem;
  color: #162740;
}

.emotion-15:active:not(:disabled) {
  background-color: #AEBFFF;
  border-radius: 20rem;
  color: #162740;
}

.emotion-19 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
    data-testid="sidebar"
    open=""
    role="complementary"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
            data-testid="close-icon"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="emotion-5 emotion-6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <nav
      aria-label="Sidebar"
      class="emotion-7"
      role="navigation"
    >
      <ul
        class="emotion-8"
        role="list"
      >
        <li
          class="emotion-9"
        >
          <div
            class="emotion-10"
            data-testid="/getting-started"
          >
            Getting Started
          </div>
          <div
            class="emotion-9"
          >
            <div
              class="emotion-12"
              id="/getting-started/code"
            >
              Code
            </div>
            <div>
              <a
                class="emotion-13"
                href="/getting-started/code/web"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/getting-started/code/web"
                  >
                    Web
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/getting-started/code/instrumentation"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/getting-started/code/instrumentation"
                  >
                    Instrumentation
                  </div>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="emotion-19"
            data-testid="divider"
          />
        </li>
        <li
          class="emotion-9"
        >
          <div
            class="emotion-10"
            data-testid="/theming"
          >
            Theme
          </div>
          <div
            class="emotion-9"
          >
            <div>
              <a
                class="emotion-13"
                href="/theming/overview"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/overview"
                  >
                    Overview
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/creating-a-theme"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/creating-a-theme"
                  >
                    Creating a theme
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/using-a-theme"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/using-a-theme"
                  >
                    Using a theme
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/theming/foundations"
            >
              Foundations
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/foundations/overview"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/foundations/overview"
                  >
                    Overview
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/foundations/colours"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/foundations/colours"
                  >
                    Colours
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/foundations/motions"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/foundations/motions"
                  >
                    Motions
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/theming/presets"
            >
              Presets
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/presets/space-presets"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/presets/space-presets"
                  >
                    Space Presets
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/presets/style-presets"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/presets/style-presets"
                  >
                    Style Presets
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/presets/typography-presets"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/presets/typography-presets"
                  >
                    Typography Presets
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/theming/component-defaults"
            >
              Component Defaults
            </div>
            <div>
              <a
                class="emotion-13"
                href="/theming/component-defaults/overview"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/theming/component-defaults/overview"
                  >
                    Overview
                  </div>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="emotion-19"
            data-testid="divider"
          />
        </li>
        <li
          class="emotion-9"
        >
          <div
            class="emotion-10"
            data-testid="/components"
          >
            Components
          </div>
          <div
            class="emotion-9"
          >
            <div
              class="emotion-12"
              id="/components/action-and-inputs"
            >
              Actions & Inputs
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/button"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/button"
                  >
                    Button
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/form"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/form"
                  >
                    Form
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/share-bar"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/share-bar"
                  >
                    Share Bar
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/slider"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/slider"
                  >
                    Slider
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/text-input"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/text-input"
                  >
                    Text Input
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/components/feedback-and-status"
            >
              Feedback & Status
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/flag"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/flag"
                  >
                    Flag
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/progress-indicator"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/progress-indicator"
                  >
                    Progress Indicator
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/components/layout"
            >
              Layout
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/aspect-ratio"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/aspect-ratio"
                  >
                    Aspect Ratio
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/block"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/block"
                  >
                    Block
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/card"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/card"
                  >
                    Card
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/divider"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/divider"
                  >
                    Divider
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/drawer"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/drawer"
                  >
                    Drawer
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/grid"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/grid"
                  >
                    Grid
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/stack"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/stack"
                  >
                    Stack
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/visibility"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/visibility"
                  >
                    Visibility
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/components/media"
            >
              Media
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/audio-player"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/audio-player"
                  >
                    Audio Player
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/icons"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/icons"
                  >
                    Icons
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/image"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/image"
                  >
                    Image
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/volume-control"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/volume-control"
                  >
                    Volume Control
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/components/navigation"
            >
              Navigation
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/link"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/link"
                  >
                    Link
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/scroll"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/scroll"
                  >
                    Scroll
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/tabs"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/tabs"
                  >
                    Tabs
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/tag"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/tag"
                  >
                    Tag
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/title-bar"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/title-bar"
                  >
                    Title Bar
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/components/text"
            >
              Text
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/byline"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/byline"
                  >
                    Byline
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/caption"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/caption"
                  >
                    Caption
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/date-time"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/date-time"
                  >
                    Date Time
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/headline"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/headline"
                  >
                    Headline
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/ordered-list"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/ordered-list"
                  >
                    Ordered List
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/standfirst"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/standfirst"
                  >
                    Standfirst
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/text-block"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/text-block"
                  >
                    Text Block
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/unordered-list"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/unordered-list"
                  >
                    Unordered List
                  </div>
                </span>
              </a>
            </div>
            <div
              class="emotion-12"
              id="/components/third-party"
            >
              Third Party Integrations
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/consent"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/consent"
                  >
                    Consent
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/consent-settings-link"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/consent-settings-link"
                  >
                    Consent Settings Link
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/experimentation-web"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/experimentation-web"
                  >
                    Experimentation Web
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/components/tealium"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/components/tealium"
                  >
                    Tealium
                  </div>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="emotion-19"
            data-testid="divider"
          />
        </li>
        <li
          class="emotion-9"
        >
          <div
            class="emotion-10"
            data-testid="/utils"
          >
            Utilities
          </div>
          <div
            class="emotion-9"
          >
            <div>
              <a
                class="emotion-13"
                href="/utils/emotion"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/utils/emotion"
                  >
                    Emotion
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/utils/custom-to-newskit-icon"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/utils/custom-to-newskit-icon"
                  >
                    customToNewsKitIcon
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/utils/get-css-from-theme"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/utils/get-css-from-theme"
                  >
                    getCssFromTheme
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/utils/get-from-theme"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/utils/get-from-theme"
                  >
                    getFromTheme
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/utils/get-defaults"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/utils/get-defaults"
                  >
                    getComponentDefaults
                  </div>
                </span>
              </a>
            </div>
            <div>
              <a
                class="emotion-13"
                href="/utils/hooks"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/utils/hooks"
                  >
                    Hooks
                  </div>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="emotion-19"
            data-testid="divider"
          />
        </li>
        <li
          class="emotion-9"
        >
          <div
            class="emotion-10"
            data-testid="/help"
          >
            Help
          </div>
          <div
            class="emotion-9"
          >
            <div>
              <a
                class="emotion-13"
                href="/help/contact-us"
              >
                <span
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                    data-testid="/help/contact-us"
                  >
                    Contact Us
                  </div>
                </span>
              </a>
            </div>
          </div>
        </li>
      </ul>
    </nav>
  </div>
  .emotion-0 {
  background-color: rgba(0, 0, 0, 0.8);
  position: fixed;
  overflow: auto;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.6s,right 0.3s;
  transition: opacity 0.6s,right 0.3s;
  z-index: 2;
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

<div
    class="emotion-0"
    data-testid="overlay"
  />
</DocumentFragment>
`;
